[package]
name = "trove"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yui = { git = "https://github.com/wehjin/yui.git" }
stringedit = { git = "https://github.com/wehjin/stringedit.git" }
echo-lib = { git = "https://github.com/wehjin/gal-core.git" }
dirs = "5.0.1"
rand = "0.8.5"
chad-core = { git = "https://github.com/wehjin/chad-core.git" }