[package]
name = "trove"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
